--- a/exit/exit.html
+++ b/exit/exit.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <!-- saved from url=(0131)https://jksb.v.zzu.edu.cn/vls6sss/zzujksb.dll/gettongxing?ptopid=tEC94E910E798416796E0A024A3D85280&door=0017&sid=210906201311660511 -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -17,9 +16,9 @@
 <body>
 <form method="POST" name="myform52" action="https://jksb.v.zzu.edu.cn/vls6sss/zzujksb.dll/gettongxing?ptopid=tEC94E910E798416796E0A024A3D85280&amp;door=0017&amp;sid=210906201311660511">
 <div id="bak_0">  
-  <div style="WIDTH: 100%; HEIGHT: 102px;background:url(https://jksb.v.zzu.edu.cn/imagesss/title316_66548.png);"><div style="width:100%;height:32px;line-height:32px;text-align:right"><a href="https://jksb.v.zzu.edu.cn/vls6sss/zzujksb.dll/logout?ptopid=tEC94E910E798416796E0A024A3D85280"><span style="color:#00c;">〖切换账号〗</span></a>　</div></div><div style="width:100%;height:7px;BACKGROUND-IMAGE: url(/images/split5.png)"></div><div style="WIDTH: 100%; HEIGHT: 90px;"><div style="width:100%;height:32%;line-height:32px;text-align:left;"><span style="font-size:12px;color:#333;">获取时间：</span><span style="font-size:16px;color:#a0a;" id=current_date>09月06日 20:10　</span><span style="font-size:12px;color:#333;">&nbsp;有效期剩余 </span><span id="tim317" style="font-size:22px;color:#c00;font-weight:500;font-family:黑体;">9分59秒</span></div><div style="width:100%;height:7px;BACKGROUND-IMAGE: url(/images/split5.png)"></div>
-  <div style="width:100%;min-height:25px;line-height:25px;font-size:18px;color:#00c;font-weight:500;font-family:黑体;">　<span style="color:#00a">机械工程学院　刘红贝</span><br>　通行信息：主校区大门东门.<span style="background-color:#DF01D7;color:#ff0">出口</span><br>　出入身份：批准出入校园学生</div>
-<div style="width: 100%; height: 25px; background-color: rgb(170, 176, 254);" id="bian92a"></div><div style="width:100%;height:300px;"><div style="width: 25px; height: 100%; background-color: rgb(170, 176, 254); float: left;" id="bian92b1"></div><div style="width:300px;height:100%;float:left;text-align:center;"><img src="http://a1.qpic.cn/psc?/V13X7WW42EEinq/bqQfVz5yrrGYSXMvKr.cqfIgaF37uSICnJwpUj1CJGeSfsUF.jVYcC.4CH2PUf19ozFKZy10wobGrZgZECNTDLdtZQ9nxKNU80e9barYk98!/b&ek=1&kp=1&pt=0&bo=YwIvA2MCLwMRECc!&tl=3&vuin=843295753&tm=1636768800&sce=60-2-2&rf=viewer_311" style="height:300px;border:0px;"></div><div style="width: 25px; height: 100%; background-color: rgb(170, 176, 254); float: right;" id="bian92b2"></div></div><div style="width: 100%; height: 25px; background-color: rgb(170, 176, 254);" id="bian92c"></div><div style="width:100%;height:7px;BACKGROUND-IMAGE: url(/images/split5.png)"></div><div style="width:100%;min-height:18px;line-height:18px;font-size:12px;color:#666;text-align:center">郑州大学疫情防控领导小组、保卫处、信息化办公室</div>
+  <div style="WIDTH: 100%; HEIGHT: 102px;background:url(https://jksb.v.zzu.edu.cn/imagesss/title316_66548.png);"><div style="width:100%;height:32px;line-height:32px;text-align:right"><a href="https://jksb.v.zzu.edu.cn/vls6sss/zzujksb.dll/logout?ptopid=s59972F9F97E841AC8B135DA2596FFBE9"><span style="color:#00c;">〖切换账号〗</span></a>　</div></div><div style="width:100%;height:7px;BACKGROUND-IMAGE: url(/images/split5.png)"></div><div style="WIDTH: 100%; min-HEIGHT: 90px;"><div style="width:100%;height:32%;line-height:32px;text-align:left;"><span style="font-size:12px;color:#333;">获取时间：</span><span style="font-size:16px;color:#a0a;" id=current_date>09月06日 20:10  </span><span style="font-size:12px;color:#333;">有效期剩余 </span><span id="tim317" style="font-size:22px;color:#c00;font-weight:500;font-family:黑体;">9分29秒</span></div><div style="width:100%;height:7px;BACKGROUND-IMAGE: url(/images/split5.png)"></div>
+  <div style="width:100%;min-height:25px;line-height:25px;font-size:18px;color:#00c;font-weight:500;font-family:黑体;">　<span style="color:#00a">信息工程学院　刘红贝</span><br>　通行信息：主校区大门东门.<span style="background-color:#c0c;color:#ff0">出口</span><br>　出入身份：批准出入校园学生</div></div>
+<div style="width: 100%; height: 25px; background-color: rgb(170, 176, 254);" id="bian92a"></div><div style="width:100%;height:300px;"><div style="width: 25px; height: 100%; background-color: rgb(170, 176, 254); float: left;" id="bian92b1"></div><div style="width:300px;height:100%;float:left;text-align:center;"><img src="http://phototj.photo.store.qq.com/psc?/V13X7WW42EEinq/bqQfVz5yrrGYSXMvKr.cqde*Iy89cp*I0pUoXMApZWCCouT4bzSZ.jgcbv4R53OHD2FNp4oll7LLVj2*LKfkUfGPqegYRjs.wWWOAj5DGV8!/b&bo=ZgHSAWYB0gERECc!&rf=viewer_311" style="height:300px;border:0px;"></div><div style="width: 25px; height: 100%; background-color: rgb(170, 176, 254); float: right;" id="bian92b2"></div></div><div style="width: 100%; height: 25px; background-color: rgb(170, 176, 254);" id="bian92c"></div><div style="width:100%;height:7px;BACKGROUND-IMAGE: url(/images/split5.png)"></div><div style="width:100%;min-height:18px;line-height:18px;font-size:12px;color:#666;text-align:center">郑州大学疫情防控领导小组、保卫处、信息化办公室</div>
 </div>
 
 <div style="width:1px;height:1px;">
@@ -35,14 +34,14 @@
     document.getElementById("zzj_fun_426s").src=us;
   }
   var timeID=0;
-var tt1=599;
+var tt1=600;
 tt2=0;
 tt3=0;
 var timeID=setInterval("hnceTimer()",1000);
 function hnceTimer(){
   tt1--;
   if (tt1>=0){
-if ((tt1%2)==1){
+if ((tt1 % 2)==1){
   document.getElementById('bian92a').style.backgroundColor="#aab0fe";
   document.getElementById('bian92b1').style.backgroundColor="#aab0fe";
   document.getElementById('bian92b2').style.backgroundColor="#aab0fe";
