--- a/index.html
+++ b/index.html
@@ -5,15 +5,22 @@
 
     <body>
         
-        <a href="\enter\enter.html"_blank"> <div style="width:100%;min-height:18px;line-height:18px;font-size:40px;color:#666;text-align:center"> M-enter</span></a><br>
+        <a href="\enter\enter.html"_blank"> <div style="width:100%;min-height:18px;line-height:18px;font-size:40px;color:#666;text-align:center"> L-enter</span></a><br>
          <br>
          <br>
 
-      <a href="\exit\exit.html"_blank"><div style="width:100%;min-height:18px;line-height:18px;font-size:40px;color:#666;text-align:center"> M-exit</span></a>
+      <a href="\exit\exit.html"_blank"><div style="width:100%;min-height:18px;line-height:18px;font-size:40px;color:#666;text-align:center"> L-exit</span></a>
         <br>
          <br>
          <br> 
-        
+        <a href="\enter1\enter1.html"_blank"> <div style="width:100%;min-height:18px;line-height:18px;font-size:40px;color:#666;text-align:center"> Y-enter</span></a><br>
+         <br>
+         <br>
+
+      <a href="\exit1\exit1.html"_blank"><div style="width:100%;min-height:18px;line-height:18px;font-size:40px;color:#666;text-align:center"> Y-exit</span></a>
+        <br>
+         <br>
+         <br> 
     </body>
 
 </html>
