--- a/exit1/exit1.html
+++ b/exit1/exit1.html
@@ -10,25 +10,28 @@
 <link rel="stylesheet" type="text/css" href="./郑州大学数据中台2020_files/_xwss_2017.css"><style>
 #bak_0 {MARGIN:0 auto; left: 0;WIDTH: 350px; min-HEIGHT:540px;}
 
+
 </style>
 
 </head>
 <body>
 <form method="POST" name="myform52" action="https://jksb.v.zzu.edu.cn/vls6sss/zzujksb.dll/gettongxing?ptopid=tEC94E910E798416796E0A024A3D85280&amp;door=0017&amp;sid=210906201311660511">
 <div id="bak_0">  
-  <div style="WIDTH: 100%; HEIGHT: 102px;background:url(https://jksb.v.zzu.edu.cn/imagesss/title316_95064.png);"><div style="width:100%;height:32px;line-height:32px;text-align:right"><a href="https://jksb.v.zzu.edu.cn/vls6sss/zzujksb.dll/logout?ptopid=tEC94E910E798416796E0A024A3D85280"><span style="color:#00c;">〖切换账号〗</span></a>　</div></div><div style="width:100%;height:7px;BACKGROUND-IMAGE: url(/images/split5.png)"></div><div style="WIDTH: 100%; HEIGHT: 90px;"><div style="width:100%;height:32%;line-height:32px;text-align:left;"><span style="font-size:12px;color:#333;">获取时间：</span><span style="font-size:16px;color:#a0a;" id=current_date>09月06日 20:10　</span><span style="font-size:12px;color:#333;">&nbsp;有效期剩余 </span><span id="tim317" style="font-size:22px;color:#c00;font-weight:500;font-family:黑体;">9分59秒</span></div><div style="width:100%;height:7px;BACKGROUND-IMAGE: url(/images/split5.png)"></div>
-  <div style="width:100%;min-height:25px;line-height:25px;font-size:18px;color:#00c;font-weight:500;font-family:黑体;">　<span style="color:#00a">旅游管理学院　余晓曼</span><br>　主校区大门东门.<span style="background-color:#DF01D7;color:#ff0">出口</span><br>　身份：批准出入校园学生</div>
+  <div style="width:100%;height:102px;background:url(https://jksb.v.zzu.edu.cn/imagesss/title316_95307.png);"><div style="width:100%;height:32px;line-height:32px;text-align:right"><a href="https://jksb.v.zzu.edu.cn/vls6sss/zzujksb.dll/logout?ptopid=s59972F9F97E841AC8B135DA2596FFBE9"><span style="color:#00c;">〖切换账号〗</span></a>　</div></div><div style="width:100%;height:7px;BACKGROUND-IMAGE: url(/images/split5.png)"></div><div style="width:100%; min-height:90px;"><div style="width:100%;height:32%;line-height:32px;text-align:left;"><span style="font-size:12px;color:#333;">获取时间：</span><span style="font-size:16px;color:#a0a;" id=current_date>09月06日 20:10　</span><span style="font-size:12px;color:#333;">有效期剩余 </span><span id="tim317" style="font-size:22px;color:#c00;font-weight:500;font-family:黑体;">9分59秒</span></div><div style="width:100%;height:7px;BACKGROUND-IMAGE: url(/images/split5.png)"></div>
+  <div style="width:100%;min-height:26px;line-height:26px;font-size:18px;color:#00c;font-weight:500;font-family:黑体;BACKGROUND-IMAGE:url(https://jksb.v.zzu.edu.cn/imagesss/sf_sheng3.png)">　<span style="color:#00a">旅游管理学院.余晓曼</span><br />　主校区大门东门.<span style="background-color:#c0c;color:#ff0">出口</span><br />　身份：批准出入校园学生<br /><span style="font-size:12px;color:#666">关注“郑州大学网络管理中心”微信公众号可提醒健康打卡</span></div></div>
+
 <div style="width: 100%; height: 25px; background-color: rgb(170, 176, 254);" id="bian92a"></div><div style="width:100%;height:300px;"><div style="width: 25px; height: 100%; background-color: rgb(170, 176, 254); float: left;" id="bian92b1"></div><div style="width:300px;height:100%;float:left;text-align:center;"><img src="http://phototj.photo.store.qq.com/psc?/V13X7WW42EEinq/bqQfVz5yrrGYSXMvKr.cqTsh75wBeLT.2JViBhTnqb*nL9rOzZ25ihcm72JhiJiYSFDukd1Rlc2XU.arEoyDCGJc8LOnWH5glVeFkzrAQwk!/b&bo=lAXQB5QF0AcRECc!&rf=viewer_311" style="height:300px;border:0px;"></div><div style="width: 25px; height: 100%; background-color: rgb(170, 176, 254); float: right;" id="bian92b2"></div></div><div style="width: 100%; height: 25px; background-color: rgb(170, 176, 254);" id="bian92c"></div><div style="width:100%;height:7px;BACKGROUND-IMAGE: url(/images/split5.png)"></div><div style="width:100%;min-height:18px;line-height:18px;font-size:12px;color:#666;text-align:center">郑州大学疫情防控领导小组、保卫处、信息化办公室</div>
 </div>
 
 <div style="width:1px;height:1px;">
-  <iframe name="zzj_fun_426" id="zzj_fun_426s" src="./郑州大学数据中台2020_files/getsomething.html" marginwidth="0" marginheight="0" height="100%" width="100%" scrolling="no" border="0" frameborder="0" allowtransparency="true"></iframe>
+  <iframe name="zzj_fun_426" id="zzj_fun_426s" src="https://jksb.v.zzu.edu.cn/vls6sss/zzujksb.dll/getdipos?ptopid=s9800EDB3C8334262B9FB567FC83E6E52&sid=220322210115032753&fun2=0003" marginwidth="0" marginheight="0" height="100%"
+    width="100%" scrolling="no" border="0" frameborder="0" allowtransparency="true"></iframe>
 </div>
-<input type="hidden" name="ptopid" value="tEC94E910E798416796E0A024A3D85280"><input type="hidden" name="sid" value="210906201408377681">
+<input type="hidden" name="ptopid" value="s9800EDB3C8334262B9FB567FC83E6E52"><input type="hidden" name="sid" value="220322210115032709"></form>
 
 <div style="width:100%;height:50px;"></div>
-
-</div></form><div style="position: static; display: none; width: 0px; height: 0px; border: none; padding: 0px; margin: 0px;"><div id="trans-tooltip"><div id="tip-left-top" style="background: url(&quot;chrome-extension://jpjgjbbhaifmiigkopmnpbgcgmigaame/imgs/map/tip-left-top.png&quot;);"></div><div id="tip-top" style="background: url(&quot;chrome-extension://jpjgjbbhaifmiigkopmnpbgcgmigaame/imgs/map/tip-top.png&quot;) repeat-x;"></div><div id="tip-right-top" style="background: url(&quot;chrome-extension://jpjgjbbhaifmiigkopmnpbgcgmigaame/imgs/map/tip-right-top.png&quot;);"></div><div id="tip-right" style="background: url(&quot;chrome-extension://jpjgjbbhaifmiigkopmnpbgcgmigaame/imgs/map/tip-right.png&quot;) repeat-y;"></div><div id="tip-right-bottom" style="background: url(&quot;chrome-extension://jpjgjbbhaifmiigkopmnpbgcgmigaame/imgs/map/tip-right-bottom.png&quot;);"></div><div id="tip-bottom" style="background: url(&quot;chrome-extension://jpjgjbbhaifmiigkopmnpbgcgmigaame/imgs/map/tip-bottom.png&quot;) repeat-x;"></div><div id="tip-left-bottom" style="background: url(&quot;chrome-extension://jpjgjbbhaifmiigkopmnpbgcgmigaame/imgs/map/tip-left-bottom.png&quot;);"></div><div id="tip-left" style="background: url(&quot;chrome-extension://jpjgjbbhaifmiigkopmnpbgcgmigaame/imgs/map/tip-left.png&quot;);"></div><div id="trans-content"></div></div><div id="tip-arrow-bottom" style="background: url(&quot;chrome-extension://jpjgjbbhaifmiigkopmnpbgcgmigaame/imgs/map/tip-arrow-bottom.png&quot;);"></div><div id="tip-arrow-top" style="background: url(&quot;chrome-extension://jpjgjbbhaifmiigkopmnpbgcgmigaame/imgs/map/tip-arrow-top.png&quot;);"></div></div></body></html>
+</body>
+</html>
 <script language="javascript">
   function zzjCallOneUrl(us){
     document.getElementById("zzj_fun_426s").src=us;
