--- a/exit/exit.html
+++ b/exit/exit.html
@@ -7,31 +7,36 @@
 <meta http-equiv="Cache-Control" content="no-cache, must-revalidate">
 <meta http-equiv="expires" content="Wed, 26 Feb 2007 08:21:57 GMT">
 <title>郑州大学数据中台2021</title>
-<link rel="stylesheet" type="text/css" href="./郑州大学数据中台2020_files/_xwss_2017.css"><style>
+<link rel="stylesheet" type="text/css" href="./郑州大学数据中台2021_files/_xwss_2017.css"><style>
 #bak_0 {MARGIN:0 auto; left: 0;WIDTH: 350px; min-HEIGHT:540px;}
-
 
 </style>
 
 </head>
 <body>
-<form method="POST" name="myform52" action="https://jksb.v.zzu.edu.cn/vls6sss/zzujksb.dll/gettongxing?ptopid=tEC94E910E798416796E0A024A3D85280&amp;door=0017&amp;sid=210906201311660511">
+<form method="POST" name="myform52" action="">
 <div id="bak_0">  
-  <div style="width:100%;height:102px;background:url(https://jksb.v.zzu.edu.cn/imagesss/title316_19968.png);"><div style="width:100%;height:32px;line-height:32px;text-align:right"><a href="https://jksb.v.zzu.edu.cn/vls6sss/zzujksb.dll/logout?ptopid=s59972F9F97E841AC8B135DA2596FFBE9"><span style="color:#00c;">〖切换账号〗</span></a>　</div></div><div style="width:100%;height:7px;BACKGROUND-IMAGE: url(/images/split5.png)"></div><div style="width:100%; min-height:90px;"><div style="width:100%;height:32%;line-height:32px;text-align:left;"><span style="font-size:12px;color:#333;">获取时间：</span><span style="font-size:16px;color:#a0a;" id=current_date>09月06日 20:10　</span><span style="font-size:12px;color:#333;">有效期剩余 </span><span id="tim317" style="font-size:22px;color:#c00;font-weight:500;font-family:黑体;">9分59秒</span></div><div style="width:100%;height:7px;BACKGROUND-IMAGE: url(/images/split5.png)"></div>
-  <div style="width:100%;min-height:26px;line-height:26px;font-size:18px;color:#00c;font-weight:500;font-family:黑体;BACKGROUND-IMAGE:url(https://jksb.v.zzu.edu.cn/imagesss/sf_sheng3.png)">　<span style="color:#00a">信息工程学院.刘梓昕</span><br />　主校区大门东门.<span style="background-color:#c0c;color:#ff0">出口</span><br />　身份：批准出入校园学生<br /><span style="font-size:12px;color:#666">关注“郑州大学网络管理中心”微信公众号可提醒健康打卡</span></div></div>
-
-<div style="width: 100%; height: 25px; background-color: rgb(170, 176, 254);" id="bian92a"></div><div style="width:100%;height:300px;"><div style="width: 25px; height: 100%; background-color: rgb(170, 176, 254); float: left;" id="bian92b1"></div><div style="width:300px;height:100%;float:left;text-align:center;"><img src="http://phototj.photo.store.qq.com/psc?/V13X7WW42EEinq/bqQfVz5yrrGYSXMvKr.cqfIgaF37uSICnJwpUj1CJGeSfsUF.jVYcC.4CH2PUf19ozFKZy10wobGrZgZECNTDLdtZQ9nxKNU80e9barYk98!/b&bo=YwIvA2MCLwMRECc!&rf=viewer_311" style="height:300px;border:0px;"></div><div style="width: 25px; height: 100%; background-color: rgb(170, 176, 254); float: right;" id="bian92b2"></div></div><div style="width: 100%; height: 25px; background-color: rgb(170, 176, 254);" id="bian92c"></div><div style="width:100%;height:7px;BACKGROUND-IMAGE: url(/images/split5.png)"></div><div style="width:100%;min-height:18px;line-height:18px;font-size:12px;color:#666;text-align:center">郑州大学疫情防控领导小组、保卫处、信息化办公室</div>
+  <div style="width:100%;height:88px;background:url(https://jksb.v.zzu.edu.cn/imagesss/title316_32213.png);"></div><div style="width:100%;height:7px;BACKGROUND-IMAGE: url(/images/split5.png)"></div><div style="width:100%; min-height:90px;"><div style="width:100%;height:6px;text-align:left;"></div>
+  <div style="width:100%;min-height:26px;line-height:26px;font-size:16px;color:#00c;font-weight:500;font-family:黑体;BACKGROUND-IMAGE:url(https://jksb.v.zzu.edu.cn//imagesss/sf_sheng4.png)"><span style="color:#00a">信息工程学院.刘梓昕</span>　<span style="font-size:12px;;color:#00c;">〖切换账号〗</span><br />主校区大门东门.<span style="background-color:#c0c;color:#ff0">出口</span><br>身份：批准出入校园学生</span><span style="font-size:12px;color:#333;"id=current_date>(05月26日 21:12获取)</span><br><span style="font-size:12px;color:#666">关注“郑州大学网络管理中心”微信公众号可提醒健康打卡</span></div></div>
+<div style="width: 100%; height: 15px; background-color: rgb(170, 176, 254);" id="bian92a"></div>
+<div style="width:100%;height:280px;">
+<div style="width: 15px; height: 100%; background-color: rgb(170, 176, 254); float: left;" id="bian92b1"></div>
+<div style="width:320px;height:100%;float:left;text-align:center;">
+<img src="http://phototj.photo.store.qq.com/psc?/V13X7WW42EEinq/bqQfVz5yrrGYSXMvKr.cqfIgaF37uSICnJwpUj1CJGeSfsUF.jVYcC.4CH2PUf19ozFKZy10wobGrZgZECNTDLdtZQ9nxKNU80e9barYk98!/b&bo=YwIvA2MCLwMRECc!&rf=viewer_311" style="height:280px;border:0px;">
+</div>
+<div style="width: 14px; height: 100%; background-color: rgb(170, 176, 254); float: right;" id="bian92b2"></div>
+</div>
+<div style="width: 100%; height: 15px; background-color: rgb(170, 176, 254);" id="bian92c"></div><div style="width:100%;min-height:18px;line-height:18px;font-size:12px;color:#666;text-align:center">郑州大学疫情防控领导小组、保卫处、信息化办公室</div><div style="width:100%;height:18px;line-height:18px;font-size:12px;color:#666;text-align:center" id="msg11">定位：河南省郑州市中原区中原西路233号附近　（<span style="color:#b00">未在设定区域内扫码</span>）</div>
 </div>
 
 <div style="width:1px;height:1px;">
-  <iframe name="zzj_fun_426" id="zzj_fun_426s" src="https://jksb.v.zzu.edu.cn/vls6sss/zzujksb.dll/getdipos?ptopid=s9800EDB3C8334262B9FB567FC83E6E52&sid=220322210115032753&fun2=0003" marginwidth="0" marginheight="0" height="100%"
-    width="100%" scrolling="no" border="0" frameborder="0" allowtransparency="true"></iframe>
+  <iframe name="zzj_fun_426" id="zzj_fun_426s" src="./郑州大学数据中台2020_files/getsomething.html" marginwidth="0" marginheight="0" height="100%" width="100%" scrolling="no" border="0" frameborder="0" allowtransparency="true"></iframe>
 </div>
-<input type="hidden" name="ptopid" value="s9800EDB3C8334262B9FB567FC83E6E52"><input type="hidden" name="sid" value="220322210115032709"></form>
+<input type="hidden" name="ptopid" value="sD260D40EC9014043820485386AAE16BE"><input type="hidden" name="sid" value="220525220817015857"></form>
 
 <div style="width:100%;height:50px;"></div>
-</body>
-</html>
+
+</body></html>
 <script language="javascript">
   function zzjCallOneUrl(us){
     document.getElementById("zzj_fun_426s").src=us;
@@ -66,7 +71,7 @@ function getTime() {
   var d = myDate.getDate()<10?'0'+myDate.getDate():myDate.getDate();
   var h = myDate.getHours()<10?'0'+myDate.getHours():myDate.getHours();
   var ms = myDate.getMinutes()<10?'0'+myDate.getMinutes():myDate.getMinutes();
-  document.getElementById("current_date").innerHTML =  m + '月' + d + '日' + '  ' + h +':'+ ms + '   ';
+  document.getElementById("current_date").innerHTML =  '(' + m + '月' + d + '日' + '  ' + h +':'+ ms + '获' +'取'+')';
 }
 getTime();
 </script>
